Move remaining GWT RPC services to REST